--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="me">
                 <div class="portrait">
                     <a href="#">
-                        <img src="http://om739linv.bkt.clouddn.com/imgForCV.jpg">
+                        <img src="https://avatars1.githubusercontent.com/u/3774016?v=3&s=460">
                     </a>
                 </div>
                 <h1>张大侠</h1>
@@ -133,13 +133,13 @@
                 <ul>
                     <li>
                         <h3>
-                            <span>北京协和医学院医学信息研究所 - 情报学专业（硕士）</span>
+                            <span>北京************ - ***专业（硕士）</span>
                             <time>2014.9-2017.7</time>
                         </h3>
                         <p>专业排名<mark>2/19</mark>，期间发表国际会议英文摘要1篇，国内核心期刊文章10篇（其中一作5篇），获国家级奖励两项，一等奖学金2次，优秀研究生2次。</p>
                     </li>
                     <li>
-                        <h3>郑州大学信息管理学院 - 信息管理与信息系统专业（本科）<time>2010.9-2014.7</time></h3>
+                        <h3>郑州******** - 信息管理与信息系统专业（本科）<time>2010.9-2014.7</time></h3>
                         <p>专业排名<mark>15/90</mark>，期间发表国内核心期刊文章1篇，三等奖学金2次。</p>
                     </li>
                 </ul>
@@ -151,23 +151,23 @@
                 <ul>
                     <li>
                         <h3>
-                            <span>杭州恒生芸泰网络科技有限公司－前端开发工程师（实习）</span>
+                            <span>杭州****网络科技有限公司－前端开发工程师（实习）</span>
                             <time>2016.11至今</time>
                         </h3>
                         <ul class="info-content">
-                            <li>深度参与云医院项目迭代17-19的前端开发工作，独立承担并完成收货地址管理、简化就诊人、个人中心改版等功能点的开发，主要维护并修复自助缴费、免费咨询、专家咨询等功能点bug若干。项目采用技术栈<mark>React+React Router+Node.js+SASS</mark>，实现<mark>前后端完全分离</mark>。</li>
+                            <li>深度参与***项目迭代17-19的前端开发工作，独立承担并完成******、*****、******等功能点的开发，主要维护并修复****、****、****等功能点bug若干。项目采用技术栈<mark>React+React Router+Node.js+SASS</mark>，实现<mark>前后端完全分离</mark>。</li>
                             <li>配合UI和后端，根据产品需求提供H5页面嵌入到后台模板，要求<mark>移动端显示正常</mark>。</li>
-                            <li>主要参与智慧医院第4期的静态页面开发工作，要求<mark>在支付宝环境下完全兼容</mark>。</li>
+                            <li>主要参与*******的静态页面开发工作，要求<mark>在支付宝环境下完全兼容</mark>。</li>
                         </ul>
                     </li>
                     <li>
                         <h3>
-                            <span>郑州灵客网络科技有限公司－前端开发工程师（实习）</span>
+                            <span>郑州****网络科技有限公司－前端开发工程师（实习）</span>
                             <time>2011.10-2013.7</time>
                         </h3>
                         <ul class="info-content">
-                            <li>深度参与公司主线产品「二七路论坛」的前端开发工作，完成帖子快捷回复、<mark>全站图片懒加载</mark>、活动banner、帖子管理（使用Yii框架）等功能。项目采用技术栈phpWind+NAMP。<a href="http://itsay.tech/162/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
-                            <li>主要参与公司产品「大咖汇」的前端开发工作，实现接入微博、微信、QQ等<mark>第三方账号登录</mark>等功能。项目采用技术栈WordPress+NAMP。</li>
+                            <li>深度参与公司主线产品「****」的前端开发工作，完成帖子快捷回复、<mark>全站图片懒加载</mark>、活动banner、帖子管理（使用Yii框架）等功能。项目采用技术栈phpWind+NAMP。<a href="http://itsay.tech/162/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
+                            <li>主要参与公司产品「***」的前端开发工作，实现接入微博、微信、QQ等<mark>第三方账号登录</mark>等功能。项目采用技术栈WordPress+NAMP。</li>
                             <li>活动页面的开发（七夕活动、抽奖活动以及承接外包页面）。</li>
                             <li>论坛<mark>图片增量备份</mark>（CentOS+vsftpd+crontab）<a href="http://itsay.tech/166/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
                         </ul>
@@ -197,7 +197,7 @@
                             <time>2015.6-2017.4</time>
                         </h3>
                         <ul class="info-content">
-                            <li>维护个人公众号“张大侠”，粉丝360+，主要内容有关前端、个人感悟、产品等，保证每周推送2篇+。</li>
+                            <li>维护个人公众号“张大侠”，粉丝360+，主要内容有关前端、个人感悟、产品等，保证每周推送2篇。</li>
                         </ul>
                     </li>
                     <li>
@@ -239,7 +239,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+<!--                     <li>
                         <h3>
                             <span>个人简历模板</span>
                             <span class="link"><a href="http://itsay.tech/cv/" target="_blank">源代码</a></span>
@@ -247,9 +247,9 @@
                             <time>2017.2-2017.3</time>
                         </h3>
                         <ul class="info-content">
-                            <li>调研网上web简历模板，自己制作出适宜前端求职的简历模板，并<mark>兼容移动端显示</mark>，<mark>完美打印pdf</mark>，以及<mark>生成二维码</mark>访问等功能</li>
+                            <li>调研网上web简历模板，自己制作出适宜前端求职的简历模板，并<mark>兼容移动端显示</mark>，以及<mark>生成二维码</mark>访问等功能</li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- 自我评价 -->
@@ -261,7 +261,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>© 2017 张泽.文档最后更新时间为<time>2017年3月8日</time></p>
+        <p>© 2017 张大侠.文档最后更新时间为<time>2017年3月8日</time>.</p>
     </div>
 </body>
 </html>
