--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                 <ul>
                     <li>
                         <h3>
-                            <span>北京************ - ***专业（硕士）</span>
+                            <span>************** - ***专业（硕士）</span>
                             <time>2014.9-2017.7</time>
                         </h3>
-                        <p>专业排名<mark>2/19</mark>，期间发表国际会议英文摘要1篇，国内核心期刊文章10篇（其中一作5篇），获国家级奖励两项，一等奖学金2次，优秀研究生2次。</p>
+                        <p>专业排名<mark>*/**</mark>，期间发表国际会议英文摘要1篇，国内核心期刊文章10篇（其中一作5篇），获*******，*****2次，****2次。</p>
                     </li>
                     <li>
-                        <h3>郑州******** - 信息管理与信息系统专业（本科）<time>2010.9-2014.7</time></h3>
+                        <h3>********** - *********专业（本科）<time>2010.9-2014.7</time></h3>
                         <p>专业排名<mark>15/90</mark>，期间发表国内核心期刊文章1篇，三等奖学金2次。</p>
                     </li>
                 </ul>
@@ -162,7 +162,7 @@
                     </li>
                     <li>
                         <h3>
-                            <span>郑州****网络科技有限公司－前端开发工程师（实习）</span>
+                            <span>******网络科技有限公司－前端开发工程师（实习）</span>
                             <time>2011.10-2013.7</time>
                         </h3>
                         <ul class="info-content">
