增加侧边栏

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
         <div class="main">
             <!-- 教育经历 -->
@@ -239,20 +238,9 @@
                             </li>
                         </ul>
                     </li>
-<!--                     <li>
-                        <h3>
-                            <span>个人简历模板</span>
-                            <span class="link"><a href="http://itsay.tech/cv/" target="_blank">源代码</a></span>
-                            <span class="link"><a href="http://itsay.tech/cv/" target="_blank">Demo</a></span>
-                            <time>2017.2-2017.3</time>
-                        </h3>
-                        <ul class="info-content">
-                            <li>调研网上web简历模板，自己制作出适宜前端求职的简历模板，并<mark>兼容移动端显示</mark>，以及<mark>生成二维码</mark>访问等功能</li>
-                        </ul>
-                    </li> -->
-                </ul>
+
             </div>
-            <!-- 自我评价 -->
+            <!-- 自我期望 -->
             <div class="work info-unit">
                 <h2><i class="fa fa-pencil" aria-hidden="true"></i>自我期望</h2>
                 <hr/>
@@ -260,6 +248,14 @@
             </div>
         </div>
     </div>
+    <!-- 侧边栏 -->
+    <aside>
+        <ul>
+            <li><a href="https://github.com/zelda/Resume" target="_blank">源代码</a></li>
+            <li><a href="http://itsay.tech/" target="_blank">Blog</a></li>
+            
+        </ul>
+    </aside>
     <div class="footer">
         <p>© 2017 张大侠.文档最后更新时间为<time>2017年3月10日</time>.</p>
     </div>
