--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
                             <li>技术栈：ThinkPHP+MongoDB+Axure</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                实现多类型多来源医学科学数据的提交、管理和共享。
+                                实现多类型多来源医学科学数据的提交、管理和共享。<br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                同 2 位同专业同学一起，
+                                同 2 位同专业同学一起。<br/>
                                 <i class="fa fa-bars" aria-hidden="true"></i>
-                                完成从<mark>“调研-设计-实现-文档”</mark>等工作，主要负责系统原型、功能框架及数据提交流程、元数据及源数据的管理与共享方案的设计以及系统开发等工作，
+                                完成从<mark>“调研-设计-实现-文档”</mark>等工作，主要负责系统原型、功能框架及数据提交流程、元数据及源数据的管理与共享方案的设计以及系统开发等工作。<br/>
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                 作品最终取得第三届共享杯国家级竞赛“一等奖” 。（2/2000）</li>
                         </ul>
@@ -228,11 +228,11 @@
                             <li>技术栈：HTML 5+D3.js+ECharts+MySQL</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                实现常见肿瘤流行病数据多维度可视化展示、数据透视及分析。
+                                实现常见肿瘤流行病数据多维度可视化展示、数据透视及分析。<br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                与 1 位同学，
+                                与 1 位同学。<br/>
                                 <i class="fa fa-bars" aria-hidden="true"></i>
-                                分析项目需求，清洗并整理相关数据(扩展第三方知识组织系统和 Google trends 数据)，并用 <mark>D3.js</mark> 和 <mark>ECharts</mark> 进行图形化展示以及实现简易自动分析 功能。
+                                分析项目需求，清洗并整理相关数据(扩展第三方知识组织系统和 Google trends 数据)，并用 <mark>D3.js</mark> 和 <mark>ECharts</mark> 进行图形化展示以及实现简易自动分析 功能。<br/>
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                 作品取得第二届共享杯国家级竞赛“特等奖”。(1/1500)
                             </li>
