--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     </li>
                     <li>
                         <label>个人主页</label>
-                        <a href="http://itsay.tech" target="_blank">itsay.tech</a>
+                        <a href="http://itsay.me/" target="_blank">itsay.me</a>
                     </li>
                     <li>
                         <label>Github</label>
-                        <a href="https://github.com/zelda" target="_blank">github.com/zelda</a>
+                        <a href="https://github.com/0b11111110" target="_blank">github.com/0b11111110</a>
                     </li>
                 </ul>
             </div>
