--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li>
                         <label>手机</label>
-                        <a href="tel:15168285219" target="_blank">151-****-5219</a>
+                        <a href="tel:15168285219" target="_blank">151-6828-5219</a>
                     </li>
                     <li>
                         <label>邮箱</label>
@@ -69,7 +69,7 @@
                     </li>
                     <li>
                         <label>个人主页</label>
-                        <a href="http://itsay.me/" target="_blank">itsay.me</a>
+                        <a href="http://0b11111110.com/" target="_blank">0b11111110.com/</a>
                     </li>
                     <li>
                         <label>Github</label>
@@ -181,29 +181,29 @@
                 <ul>
                     <li>
                         <h3>
-                            <span>个人博客 - Zelda's Blog</span>
-                            <span class="link"><a href="https://github.com/zelda/Amativeness" target="_blank">源代码</a></span>
-                            <span class="link"><a href="http://itsay.tech/" target="_blank">Demo</a></span>
+                            <span>个人主页 - 0xFE's Blog</span>
+                            <span class="link"><a href="https://github.com/0b11111110/0b11111110.github.io" target="_blank">源代码</a></span>
+                            <span class="link"><a href="http://0b11111110.com/" target="_blank">Demo</a></span>
                             <time>2012.8-2017.3</time>
                         </h3>
                         <ul class="info-content">
-                            <li>使用WordPress搭建个人博客，托管于阿里云，并大部分修改主题Amativeness 3.0。日均pv600+。</li>
+                            <li>这是项目描述，描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述</li>
                         </ul>
                     </li>
                     <li>
                         <h3>
-                            <span>个人公众号 - 张大侠</span>
-                            <span class="link"><a href="http://itsay.tech/mp/" target="_blank">存档</a></span>
+                            <span>项目2</span>
+                            <span class="link"><a href="#" target="_blank">标签</a></span>
                             <time>2015.6-2017.4</time>
                         </h3>
                         <ul class="info-content">
-                            <li>维护个人公众号“张大侠”，粉丝360+，主要内容有关前端、个人感悟、产品等，保证每周推送2篇。</li>
+                            <li>维护个人公众号“张大侠”，粉丝360+，主要内容有关前端、个人感悟、产品等</li>
                         </ul>
                     </li>
                     <li>
                         <h3>
                             <span>医学科学数据管理与共享平台</span>
-                            <span class="link"><a href="http://med-it.cn/SDMSPM/index.php" target="_blank">Demo</a></span>
+                            <span class="link"><a href="#" target="_blank">Demo</a></span>
                             <time>201*.*-201*.*</time>
                         </h3>
                         <ul class="info-content">
@@ -222,7 +222,7 @@
                     <li>
                         <h3>
                             <span>肿瘤流行病数据可视化</span>
-                            <span class="link"><a href="http://med-it.cn/CEDV/index.php" target="_blank">Demo</a></span>
+                            <span class="link"><a href="#" target="_blank">Demo</a></span>
                             <time>201*.*-201*.*</time>
                         </h3>
                         <ul class="info-content">
@@ -256,12 +256,12 @@
             <div class="work info-unit">
                 <h2><i class="fa fa-pencil" aria-hidden="true"></i>自我期望</h2>
                 <hr/>
-                <p><span class="mark-txt">“多静多思考，反省不张扬”</span>是我给自己总结的“十字箴言”，鞭策自己做人既不能以己度人，更不以人观己，要脚踏实地做事，坚持自己的梦想和本心。</p>
+                <p><span class="mark-txt">“多静多思考，反省不张扬”</span>是我给自己总结的“十字箴言”，鞭策自己做人既不能以己度人，也不以人观己，要脚踏实地做事，坚持自己的梦想和本心。</p>
             </div>
         </div>
     </div>
     <div class="footer">
-        <p>© 2017 张大侠.文档最后更新时间为<time>2017年3月10日</time>.</p>
+        <p>© 2017 张大侠.文档最后更新时间为<time>2017年12月20日</time>.</p>
     </div>
 </body>
 </html>
