--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <li>深度参与公司主线产品「****」的前端开发工作，完成帖子快捷回复、<mark>全站图片懒加载</mark>、活动banner、帖子管理（使用Yii框架）等功能。项目采用技术栈phpWind+NAMP。<a href="http://itsay.tech/162/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
                             <li>主要参与公司产品「***」的前端开发工作，实现接入微博、微信、QQ等<mark>第三方账号登录</mark>等功能。项目采用技术栈WordPress+NAMP。</li>
                             <li>活动页面的开发（七夕活动、抽奖活动以及承接外包页面）。</li>
-                            <li>论坛<mark>图片增量备份</mark>（CentOS+vsftpd+crontab）<a href="http://itsay.tech/166/" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
+                            <li>论坛<mark>图片增量备份</mark>（CentOS+vsftpd+crontab）<a href="#" target="_blank"><i class="fa fa-link" aria-hidden="true"></i>博客文章</a>。</li>
                         </ul>
                     </li>
                 </ul>
@@ -210,11 +210,11 @@
                             <li>技术栈：ThinkPHP+MongoDB+Axure</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                实现多类型多来源医学科学数据的提交、管理和共享。
+                                实现多类型多来源医学科学数据的提交、管理和共享。<br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                同 2 位同专业同学一起，
+                                同 2 位同专业同学一起，<br/>
                                 <i class="fa fa-bars" aria-hidden="true"></i>
-                                完成从<mark>“调研-设计-实现-文档”</mark>等工作，主要负责系统原型、功能框架及数据提交流程、元数据及源数据的管理与共享方案的设计以及系统开发等工作，
+                                完成从<mark>“调研-设计-实现-文档”</mark>等工作，主要负责系统原型、功能框架及数据提交流程、元数据及源数据的管理与共享方案的设计以及系统开发等工作，<br/>
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                 作品最终取得第三届共享杯国家级竞赛“一等奖” 。（2/2000）</li>
                         </ul>
@@ -229,11 +229,11 @@
                             <li>技术栈：HTML 5+D3.js+ECharts+MySQL</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                实现常见肿瘤流行病数据多维度可视化展示、数据透视及分析。
+                                实现常见肿瘤流行病数据多维度可视化展示、数据透视及分析。<br/>
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                与 1 位同学，
+                                与 1 位同学，<br/>
                                 <i class="fa fa-bars" aria-hidden="true"></i>
-                                分析项目需求，清洗并整理相关数据(扩展第三方知识组织系统和 Google trends 数据)，并用 <mark>D3.js</mark> 和 <mark>ECharts</mark> 进行图形化展示以及实现简易自动分析 功能。
+                                分析项目需求，清洗并整理相关数据(扩展第三方知识组织系统和 Google trends 数据)，并用 <mark>D3.js</mark> 和 <mark>ECharts</mark> 进行图形化展示以及实现简易自动分析 功能。<br/>
                                 <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                 作品取得第二届共享杯国家级竞赛“特等奖”。(1/1500)
                             </li>
@@ -242,8 +242,8 @@
 <!--                     <li>
                         <h3>
                             <span>个人简历模板</span>
-                            <span class="link"><a href="http://itsay.tech/cv/" target="_blank">源代码</a></span>
-                            <span class="link"><a href="http://itsay.tech/cv/" target="_blank">Demo</a></span>
+                            <span class="link"><a href="http://0b11111110.com/resume/" target="_blank">源代码</a></span>
+                            <span class="link"><a href="http://0b11111110.com/resume/" target="_blank">Demo</a></span>
                             <time>2017.2-2017.3</time>
                         </h3>
                         <ul class="info-content">
@@ -260,8 +260,16 @@
             </div>
         </div>
     </div>
+    <!-- 侧边栏 -->
+    <aside>
+        <ul>
+            <li><a href="https://gitee.com/itsay/resume" target="_blank">源代码</a></li>
+            <li><a href="http://itsay.me/" target="_blank">Blog</a></li>
+            
+        </ul>
+    </aside>
     <div class="footer">
-        <p>© 2017 张大侠.文档最后更新时间为<time>2017年12月20日</time>.</p>
+        <p>© 2017 张大侠.文档最后更新时间为<time>2017年12月21日</time>.</p>
     </div>
 </body>
 </html>
