--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <span></span>
                         </div>
                         <!-- 头像照片 -->
-                        <img class="avatar" src="https://avatars1.githubusercontent.com/u/3774016?v=3&s=460" onload="loading()">
+                        <img class="avatar" src="assets/images/avatar.jpg" onload="loading()">
                     </section>
 
                     <h1 class="name">张大侠</h1>
@@ -278,6 +278,6 @@
             </ul>
         </aside>
 
-        <script src="./static/js/script.js"></script>
+        <script src="./assets/js/index.js"></script>
     </body>
 </html>
